load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "AtollaPlaybackGuardsTest",
    size = "small",
    srcs = ["AtollaPlaybackGuardsTest.kt"],
    jvm_flags = ["-Djava.security.manager=allow"],
    test_class = "atolla.native.android.AtollaPlaybackGuardsTest",
    deps = [
        "//atolla/native:atolla_playback_guards",
        "@test_mvn//:junit_junit",
    ],
)

kt_jvm_test(
    name = "AtollaImageFallbackTest",
    size = "small",
    srcs = ["AtollaImageFallbackTest.kt"],
    jvm_flags = ["-Djava.security.manager=allow"],
    test_class = "atolla.native.android.AtollaImageFallbackTest",
    deps = [
        "//atolla/native:atolla_image_fallback",
        "@test_mvn//:junit_junit",
    ],
)

kt_jvm_test(
    name = "AtollaDiskCacheStatsTest",
    size = "small",
    srcs = ["AtollaDiskCacheStatsTest.kt"],
    jvm_flags = ["-Djava.security.manager=allow"],
    test_class = "atolla.native.android.AtollaDiskCacheStatsTest",
    deps = [
        "//atolla/native:atolla_disk_cache_stats",
        "@test_mvn//:junit_junit",
    ],
)

kt_jvm_test(
    name = "AtollaWaveformCodecSelectorTest",
    size = "small",
    srcs = ["AtollaWaveformCodecSelectorTest.kt"],
    jvm_flags = ["-Djava.security.manager=allow"],
    test_class = "atolla.native.android.AtollaWaveformCodecSelectorTest",
    deps = [
        "//atolla/native:atolla_waveform_codec_selector",
        "@test_mvn//:junit_junit",
    ],
)
