load("@build_bazel_rules_apple//apple:macos.bzl", "macos_unit_test")
load("@rules_cc//cc:objc_library.bzl", "objc_library")

objc_library(
    name = "AtollaImageFallbackTestLib",
    testonly = True,
    srcs = ["AtollaImageFallbackTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_image_fallback_ios"],
)

macos_unit_test(
    name = "AtollaImageFallbackTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaImageFallbackTestLib"],
)

objc_library(
    name = "AtollaPlaybackGuardsTestLib",
    testonly = True,
    srcs = ["AtollaPlaybackGuardsTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_playback_guards_ios"],
)

macos_unit_test(
    name = "AtollaPlaybackGuardsTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaPlaybackGuardsTestLib"],
)

objc_library(
    name = "AtollaDiskCacheStatsTestLib",
    testonly = True,
    srcs = ["AtollaDiskCacheStatsTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_disk_cache_stats_ios"],
)

macos_unit_test(
    name = "AtollaDiskCacheStatsTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaDiskCacheStatsTestLib"],
)
