load("@build_bazel_rules_apple//apple:macos.bzl", "macos_unit_test")
load("@rules_cc//cc:objc_library.bzl", "objc_library")

objc_library(
    name = "AtollaImageFallbackTestLib",
    testonly = True,
    srcs = ["AtollaImageFallbackTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_image_fallback_ios"],
)

macos_unit_test(
    name = "AtollaImageFallbackTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaImageFallbackTestLib"],
)

objc_library(
    name = "AtollaPlaybackGuardsTestLib",
    testonly = True,
    srcs = ["AtollaPlaybackGuardsTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_playback_guards_ios"],
)

macos_unit_test(
    name = "AtollaPlaybackGuardsTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaPlaybackGuardsTestLib"],
)

objc_library(
    name = "AtollaTrackCacheRetentionTestLib",
    testonly = True,
    srcs = ["AtollaTrackCacheRetentionTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_track_cache_retention_ios"],
)

macos_unit_test(
    name = "AtollaTrackCacheRetentionTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaTrackCacheRetentionTestLib"],
)

objc_library(
    name = "AtollaDiskCacheStatsTestLib",
    testonly = True,
    srcs = ["AtollaDiskCacheStatsTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_disk_cache_stats_ios"],
)

macos_unit_test(
    name = "AtollaDiskCacheStatsTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaDiskCacheStatsTestLib"],
)

objc_library(
    name = "AtollaAuthRedirectGuardTestLib",
    testonly = True,
    srcs = ["AtollaAuthRedirectGuardTest.m"],
    copts = ["-I."],
    deps = ["//atolla/native:atolla_auth_redirect_guard_ios"],
)

macos_unit_test(
    name = "AtollaAuthRedirectGuardTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaAuthRedirectGuardTestLib"],
)

objc_library(
    name = "AtollaBoundedImageDecodeTestLib",
    testonly = True,
    srcs = ["AtollaBoundedImageDecodeTest.m"],
    copts = ["-I."],
    sdk_frameworks = ["ImageIO"],
    deps = ["//atolla/native:atolla_bounded_image_decode_ios"],
)

macos_unit_test(
    name = "AtollaBoundedImageDecodeTest",
    size = "small",
    minimum_os_version = "12.0",
    deps = [":AtollaBoundedImageDecodeTestLib"],
)
